--- a/poetry-app/src/App.css
+++ b/poetry-app/src/App.css
@@ -1,78 +1,13 @@
+.navbar-light {
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+}
+
+.navbar-brand {
+  padding-left: 10px;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.Title {
-  color: rgb(0, 204, 255);
-}
-
-#yellowRectangle{
-  width:200px;
-  height:100px;
-  background:rgba(245, 245, 2, 0.767);
-  font-weight: bold;
-}
-#blueRectangle{
-  width:200px;
-  height:100px;
-  background:rgb(5, 5, 80);
-  font-weight: bold;
-}
-#redRectangle{
-  width:200px;
-  height:100px;
-  background:red;
-  font-weight: bold;
-}
-#grayRectangle{
-  width:200px;
-  height:100px;
-  background:gray;
-  font-weight: bold;
-}
-#blackRectangle{
-  width:200px;
-  height:100px;
-  background:black;
-  font-weight: bold;
-}
-#greenRectangle{
-  width:200px;
-  height:100px;
-  background:green;
-  font-weight: bold;
+  width: 100%;
+  height: 100%;
 }
