--- a/poetry-app/src/components/login.css
+++ b/poetry-app/src/components/login.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
   
-  body {
+  .body {
     min-height: 100vh;
     display: flex;
     font-weight: 400;
@@ -10,14 +10,9 @@
     background: #280A7C;
   }
   
-  body, html, .App, #root, .outer {
+  body, html, #root, .outer {
     width: 100%;
     height: 100%;
-  }
-  
-  .navbar-light {
-    background-color: #ffffff;
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   }
   
   .outer {
@@ -32,7 +27,7 @@
     width: 450px;
     margin: auto;
     background: #ffffff;
-    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+    box-shadow: 0px 14px 80px rgba(3, 5, 29, 0.2);
     padding: 40px 55px 45px 55px;
     border-radius: 15px;
     transition: all .3s;
@@ -65,8 +60,4 @@
   
   .forgot-password a {
     color: #167bff;
-  }
-  
-  .navbar-brand {
-    padding-left: 10px;
   }
