--- a/poetry-app/src/gameboard.css
+++ b/poetry-app/src/gameboard.css
@@ -1,37 +1,16 @@
-#yellowRectangle{
-    width:200px;
-    height:100px;
-    background:rgba(245, 245, 2, 0.767);
-    font-weight: bold;
-  }
-  #blueRectangle{
-    width:200px;
-    height:100px;
-    background:rgb(5, 5, 80);
-    font-weight: bold;
-  }
-  #redRectangle{
-    width:200px;
-    height:100px;
-    background:red;
-    font-weight: bold;
-  }
-  #grayRectangle{
-    width:200px;
-    height:100px;
-    background:gray;
-    font-weight: bold;
-  }
-  #blackRectangle{
-    width:200px;
-    height:100px;
-    background:black;
-    font-weight: bold;
-  }
-  #greenRectangle{
-    width:200px;
-    height:100px;
-    background:green;
-    font-weight: bold;
-  }
-  
+.drag_things_to_boxes .component_box {
+    float: center;
+}
+
+.drag_things_to_boxes .box {
+	border: 2px solid black;
+	border-radius: 4px;
+	width: 720px;
+	height: 60px;
+	margin: 10px 80px 0 0;
+	position: relative;
+}
+
+.drag_things_to_boxes .highlighted .box {
+	box-shadow: inset 0 0 4px #00f;
+}
