--- a/poetry-app/src/Styling/Login.css
+++ b/poetry-app/src/Styling/Login.css
@@ -24,10 +24,12 @@
   }
   
   .inner {
-    width: 450px;
+    width: 55%;
+    overflow-y: auto;
     margin: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
     background: #ffffff;
-    box-shadow: 0px 14px 80px rgba(3, 5, 29, 0.2);
     padding: 40px 55px 45px 55px;
     border-radius: 15px;
     transition: all .3s;
