--- a/poetry-app/src/Styling/GameBoard.css
+++ b/poetry-app/src/Styling/GameBoard.css
@@ -2,15 +2,49 @@
 	float: center;
 }
 
-.drag_things_to_boxes .box {
-	border: 2px solid black;
-	border-radius: 4px;
-	min-width: 60vw;
-	max-width: 140px;
-	height: 60px;
-	margin: 10px 80px 0 0;
-	position: relative;
+@media (max-width: 350px) {
+	.drag_things_to_boxes .box {
+		border: 2px solid black;
+		border-radius: 4px;
+		width: 80vw;
+		height: 15vh;
+		margin: 10px 80px 0 0;
+		position: relative;
+	}
 }
+
+@media (min-width: 350px) and (max-width: 500px) {
+	.drag_things_to_boxes .box {
+		border: 2px solid black;
+		border-radius: 4px;
+		width: 80vw;
+		height: 10vh;
+		margin: 10px 80px 0 0;
+		position: relative;
+	}
+}
+
+@media (min-width: 500px) and (max-width: 900px) {
+	.drag_things_to_boxes .box {
+		border: 2px solid black;
+		border-radius: 4px;
+		width: 65vw;
+		height: 60px;
+		margin: 10px 80px 0 0;
+		position: relative;
+	}
+}
+
+@media (min-width: 900px) {
+	.drag_things_to_boxes .box {
+		border: 2px solid black;
+		border-radius: 4px;
+		width: 55vw;
+		height: 60px;
+		margin: 10px 80px 0 0;
+		position: relative;
+	}
+	}
 
 .drag_things_to_boxes .highlighted .box {
 	box-shadow: inset 0 0 4px #00f;
