--- a/poetry-app/src/Styling/Login.css
+++ b/poetry-app/src/Styling/Login.css
@@ -23,17 +23,46 @@ body, html, #root, .outer {
   background: #280A7C;
 }
 
-.inner {
-  min-width: 75vw;
-  max-width: 55%;
-  overflow-y: auto;
-  margin: auto;
-  margin-top: 2%;
-  margin-bottom: 2%;
-  background: #ffffff;
-  padding: 2% 5% 2% 5%;
-  border-radius: 15px;
-  transition: all .3s;
+@media (max-width: 500px) {
+  .inner {
+    width: 95vw;
+    overflow-y: auto;
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background: #ffffff;
+    padding: 2% 5% 2% 5%;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 900px) {
+  .inner {
+    width: 90vw;
+    overflow-y: auto;
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background: #ffffff;
+    padding: 2% 5% 2% 5%;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+}
+
+@media (min-width: 900px) {
+  .inner {
+    width: 75vw;
+    overflow-y: auto;
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background: #ffffff;
+    padding: 2% 5% 2% 5%;
+    border-radius: 15px;
+    transition: all .3s;
+  }
 }
 
 .outer .form-control:focus {
