--- a/poetry-app/src/Styling/GameBoard.css
+++ b/poetry-app/src/Styling/GameBoard.css
@@ -28,23 +28,34 @@
 	.drag_things_to_boxes .box {
 		border: 2px solid black;
 		border-radius: 4px;
-		width: 65vw;
+		width: 42vw;
 		height: 60px;
 		margin: 10px 80px 0 0;
 		position: relative;
 	}
 }
 
-@media (min-width: 900px) {
+@media (min-width: 900px) and (max-width: 1100px){
 	.drag_things_to_boxes .box {
 		border: 2px solid black;
 		border-radius: 4px;
-		width: 55vw;
+		width: 32vw;
 		height: 60px;
 		margin: 10px 80px 0 0;
 		position: relative;
 	}
+}
+
+@media (min-width: 1100px) {
+	.drag_things_to_boxes .box {
+		border: 2px solid black;
+		border-radius: 4px;
+		width: 37vw;
+		height: 60px;
+		margin: 10px 80px 0 0;
+		position: relative;
 	}
+}
 
 .drag_things_to_boxes .highlighted .box {
 	box-shadow: inset 0 0 4px #00f;
