--- a/poetry-app/src/Styling/DashboardStyling.css
+++ b/poetry-app/src/Styling/DashboardStyling.css
@@ -61,12 +61,13 @@
 .poemTableCell {
     display: table-cell;
     width: 100%;
+}
+
+.poemTableCell {
     border-radius: 2vw;
 }
 
 .poemTableCell:hover {
-    /* border-right: .1vh solid black;
-    border-bottom: .1vh solid black; */
     box-shadow: .1vh;
     transform: translate3d(1px, -1px, 0);
 }
@@ -81,18 +82,23 @@
     width: 100%;
 }
 
-.singlePoemTableCell {
+.singlePoemTableCell, .singleStudentTableCell {
     display: table-cell;
-    width: 33%;
-
     /* Top Right Bottom Left */
     padding: min(0.5vh, 0.5vw) min(0.75vh, 0.75vw) min(0.55vh, 0.55vw) min(0.75vh, 0.75vw);
+}
 
+.singlePoemTableCell {
+    width: 33%;
+}
+
+.singleStudentTableCell {
+    width: 50%;
+    padding-left: min(0.75vw, 0.75vh);
 }
 
 .incompletePoem {
     background-color: #bfb3e9;
-    /* background-color: #ccffd7; */
     color: #42347c;
 }
 
@@ -109,6 +115,19 @@
 .listedPoemTitle, .listedPoemStatus, .listedPoemAuthor {
     font-size: min(1.85vh, 2.25vw);
     text-align: center;
+}
+
+.listedStudentName, .listedStudentClass, .listedStudentPoems {
+    font-size: min(1.85vh, 2.25vw);
+}
+
+.listedStudentName {
+    text-align: left;
+    padding-left: min(0.5vw, 0.5vh);
+}
+
+.listedStudentClass, .listedStudentPoems {
+    text-align: right;
 }
 
 .reactLink {
@@ -133,4 +152,101 @@
     font-size: min(2.5vh, 3vw);
 
     text-align: center;
+}
+
+.studentName {
+    font-size: min(2vh, 2.5vw);
+    text-align: left;
+}
+
+/* INSTRUCTOR DASHBOARD STYLINGS */
+
+.instructorTable {
+    display: table;
+    position: relative;
+    left: 0;
+    right: 0;
+    width: 100%;
+    top: min(3vh, 3vw);
+
+    margin-bottom: 5vh;
+
+    border-collapse: separate;
+    border-spacing: .5vh;
+}
+
+.instructorTableRow {
+    display: table-row;
+    width: 100%;
+}
+
+.instructorTableCell {
+    display: table-cell;
+    width: 100%;
+}
+
+.instructorDetailTable {
+    display: table;
+    width: 100%;
+    background-color: #bbbdba;
+    color: #41234d;
+}
+
+.instructorDetailTable:hover .instructorDetailRowDetail {
+    display: table-row;
+}
+
+.instructorDetailTable .instructorDetailRowDetail {
+    display: none;
+    transition: 0s display;
+    transition-delay: 1s;
+}
+
+.instructorDetailRowPrimary, .instructorDetailRowDetail{
+    width: 100%;
+    border-radius: 0.2vw;
+}
+
+.instructorDetailRowPrimary {
+    display: table-row;
+    font-size: min(2.05vh, 2.5vw);
+}
+
+.instructorDetailTable:hover {
+    background-color: #8ac94b;
+    color: #41234d;
+}
+
+.instructorDetailRowDetail {
+    display: none;
+    font-size: min(1.65vh, 2.05vw);
+}
+
+.instructorDetailCell {
+    display: table-cell;
+
+    padding-left: min(1vh, 1vw);
+}
+
+.instructorDetailRowDetail .instructorDetailCell:nth-child(1) {
+    padding-left: min(3vw, 3vh);
+}
+
+.instructorDetailRowDetail .instructorDetailCell:nth-child(2) {
+    text-align: right;
+    padding-right: min(3vw, 3vh);
+}
+
+.classCell {
+    text-align: right;
+    padding-right: min(1vh, 1vw);
+}
+
+@keyframes expand {
+    from {
+        display: none;
+    }
+    to {
+        display: table-cell;
+    }
 }
