--- a/poetry-app/src/Styling/SimplyScansion.css
+++ b/poetry-app/src/Styling/SimplyScansion.css
@@ -133,7 +133,7 @@
 
     .child {
         background: #ffffff;
-        height: 75vh;
+        height: 80vh;
         width: 80vw;
         margin: 20px;
         overflow-y: auto;
@@ -145,10 +145,40 @@
 
     .pieces {
         background: #ffffff;
-        height: 15vh;
+        height: 8vh;
         width: 80vw;
         margin: 1% 10%;
-        padding-top: 2.5%;
+        padding-top: 2%;
+        text-align: center;
+        border-radius: 15px;
+        transition: all .3s;
+    }
+}
+
+@media (min-width: 900px) and (max-width: 1100px) {
+    .poem {
+        font-size: 12px;
+        line-height: 70px;
+    }
+
+    .child {
+        background: #ffffff;
+        height: 85vh;
+        width: 80vw;
+        margin: 20px;
+        overflow-y: auto;
+        margin: 2% 10%;
+        padding: 2% 5% 2% 5%;
+        border-radius: 15px;
+        transition: all .3s;
+    }
+
+    .pieces {
+        background: #ffffff;
+        height: 5vh;
+        width: 40vw;
+        margin: 0 30%;
+        padding-top: 1%;
         text-align: center;
         border-radius: 15px;
         transition: all .3s;
@@ -163,7 +193,7 @@
 
     .child {
         background: #ffffff;
-        height: 60vh;
+        height: 65vh;
         width: 80vw;
         margin: 20px;
         overflow-y: auto;
@@ -176,9 +206,9 @@
     .pieces {
         background: #ffffff;
         height: 15vh;
-        width: 80vw;
-        margin: 1% 10%;
-        padding-top: 2.5%;
+        width: 40vw;
+        margin: 0 30%;
+        padding-top: 2%;
         text-align: center;
         border-radius: 15px;
         transition: all .3s;
