--- a/poetry-app/src/Styling/BoxItem.css
+++ b/poetry-app/src/Styling/BoxItem.css
@@ -48,26 +48,36 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: rgb(228, 228, 18);
+    background-color: #FFD400;
     font-weight: bold;
     text-align: center;
 }
+.box_item_component .purple {
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 3px;
+    background-color: #BB75E0;
+    font-weight: bold;
+    text-align: center;
+}
+
 .box_item_component .blue {
     color: white;
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: blue;
+    background-color: #214794;
     font-weight: bold;
     text-align: center;
 }
 
-.box_item_component .red {
+.box_item_component .green {
     color: white;
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: red;
+    background-color: #2D9E3C;
     font-weight: bold;
     text-align: center;
 }
@@ -77,7 +87,7 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color:gray;
+    background-color: #999999;
     font-weight: bold;
     text-align: center;
 }
@@ -88,16 +98,6 @@
     padding: 10px;
     margin: 3px;
     background-color: black;
-    font-weight: bold;
-    text-align: center;
-}
-
-.box_item_component .green {
-    color: white;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 3px;
-    background-color: green;
     font-weight: bold;
     text-align: center;
 }
