--- a/poetry-app/src/Styling/DashboardStyling.css
+++ b/poetry-app/src/Styling/DashboardStyling.css
@@ -246,3 +246,39 @@
     display: table-row;
     font-size: min(1.5vh, 1.5vw);
 }
+
+@media (max-width: 500px) {
+  .dash-inner {
+    width: 95vw;
+    overflow-y: auto;
+    margin: 2%;
+    background: #ffffff;
+    padding: 2% 5% 2% 5%;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 900px) {
+  .dash-inner {
+    width: 90vw;
+    overflow-y: auto;
+    margin: 2%;
+    background: #ffffff;
+    padding: 2% 5% 2% 5%;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+}
+
+@media (min-width: 900px) {
+  .dash-inner {
+    width: 75vw;
+    overflow-y: auto;
+    margin: 2%;
+    background: #ffffff;
+    padding: 2% 5% 2% 5%;
+    border-radius: 15px;
+    transition: all .3s;
+  }
+}
