--- a/poetry-app/src/Styling/BoxItem.css
+++ b/poetry-app/src/Styling/BoxItem.css
@@ -49,7 +49,7 @@
     padding: 10px;
     margin: 3px;
     background-color: #FFD400;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
 }
 .box_item_component .purple {
@@ -58,7 +58,7 @@
     padding: 10px;
     margin: 3px;
     background-color: #BB75E0;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
 }
 
@@ -68,7 +68,7 @@
     padding: 10px;
     margin: 3px;
     background-color: #214794;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
 }
 
@@ -78,7 +78,7 @@
     padding: 10px;
     margin: 3px;
     background-color: #2D9E3C;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
 }
 
@@ -88,7 +88,7 @@
     padding: 10px;
     margin: 3px;
     background-color: #999999;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
 }
 
@@ -98,7 +98,7 @@
     padding: 10px;
     margin: 3px;
     background-color: black;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
 }
 
