--- a/poetry-app/src/Styling/BoxItem.css
+++ b/poetry-app/src/Styling/BoxItem.css
@@ -1,6 +1,17 @@
-@media (max-width: 500px) {
+@media (max-width: 400px) {
     .box_item_component .outside {
         border-top: none;
+        width: 12vw;
+        font-size: 12px;
+        overflow: hidden;
+    }
+}
+
+@media (min-width: 400px) and (max-width: 500px) {
+    .box_item_component .outside {
+        border-top: none;
+        width: 12vw;
+        font-size: 14px;
         overflow: hidden;
     }
 }
@@ -8,7 +19,8 @@
 @media (min-width: 500px) and (max-width: 900px) {
     .box_item_component .outside {
         border-top: none;
-        width: 8vw;
+        width: 6.5vw;
+        font-size: 10.75px;
         overflow: hidden;
     }
 }
@@ -25,33 +37,43 @@
         margin-left: 15%;
     }
 
-    .eight {
+    .box_item_component .eight {
         border-top: none;
         width: 3vw;
+        font-size: 8px;
+        height: 55px;
         overflow: hidden;
     }
 
-    .seven {
+    .box_item_component .seven {
         border-top: none;
         width: 4vw;
+        font-size: 10px;
+        height: 55px;
         overflow: hidden;
     }
 
-    .six {
+    .box_item_component .six {
         border-top: none;
         width: 5vw;
+        font-size: 13px;
+        height: 55px;
         overflow: hidden;
     }
 
-    .four {
+    .box_item_component .four {
         border-top: none;
         width: 7vw;
+        font-size: 16px;
+        height: 55px;
         overflow: hidden;
     }
 
-    .three {
+    .box_item_component .three {
         border-top: none;
         width: 10vw;
+        font-size: 16px;
+        height: 55px;
         overflow: hidden;
     }
 }
@@ -59,7 +81,7 @@
 @media (min-width: 1100px) {
     .box_item_component .outside {
         border-top: none;
-        width: 6vw;
+        width: 5.5vw;
         overflow: hidden;
     }
 
@@ -68,31 +90,33 @@
         margin-left: 70%;
     }
 
-    .eight {
+    .box_item_component .eight {
         border-top: none;
         width: 3vw;
+        font-size: 14px;
+        height: 55px;
         overflow: hidden;
     }
 
-    .seven {
+    .box_item_component .seven {
         border-top: none;
         width: 4vw;
         overflow: hidden;
     }
 
-    .six {
+    .box_item_component .six {
         border-top: none;
         width: 5vw;
         overflow: hidden;
     }
 
-    .four {
+    .box_item_component .four {
         border-top: none;
         width: 7vw;
         overflow: hidden;
     }
 
-    .three {
+    .box_item_component .three {
         border-top: none;
         width: 10vw;
         overflow: hidden;
@@ -108,8 +132,8 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: #FFD400;
     font-weight: 900;
+    background-color: #FFD400;
     text-align: center;
 }
 .box_item_component .purple {
@@ -117,8 +141,8 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: #BB75E0;
     font-weight: 900;
+    background-color: #BB75E0;
     text-align: center;
 }
 
@@ -127,8 +151,8 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: #214794;
     font-weight: 900;
+    background-color: #214794;
     text-align: center;
 }
 
@@ -137,8 +161,8 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: #2D9E3C;
     font-weight: 900;
+    background-color: #2D9E3C;
     text-align: center;
 }
 
@@ -147,8 +171,8 @@
     border-radius: 5px;
     padding: 10px;
     margin: 3px;
-    background-color: #999999;
     font-weight: 900;
+    background-color: #999999;
     text-align: center;
 }
 
@@ -156,9 +180,9 @@
     color: white;
     border-radius: 5px;
     padding: 10px;
+    font-weight: 900;
     margin: 3px;
     background-color: black;
-    font-weight: 900;
     text-align: center;
 }
 
