--- a/poetry-app/src/Styling/GameBoard.css
+++ b/poetry-app/src/Styling/GameBoard.css
@@ -6,7 +6,7 @@
 	.drag_things_to_boxes .box {
 		border: 2px solid black;
 		border-radius: 4px;
-		width: 80vw;
+		width: 65vw;
 		height: 15vh;
 		margin: 10px 80px 0 0;
 		position: relative;
@@ -28,18 +28,29 @@
 	.drag_things_to_boxes .box {
 		border: 2px solid black;
 		border-radius: 4px;
-		width: 30vw;
+		width: 35vw;
 		height: 60px;
 		margin: 10px 80px 0 0;
 		position: relative;
 	}
 }
 
-@media (min-width: 900px) {
+@media (min-width: 900px) and (max-width: 1100px) {
 	.drag_things_to_boxes .box {
 		border: 2px solid black;
 		border-radius: 4px;
 		width: 31vw;
+		height: 57px;
+		margin: 10px 80px 0 0;
+		position: relative;
+	}
+}
+
+@media (min-width: 1100px) {
+	.drag_things_to_boxes .box {
+		border: 2px solid black;
+		border-radius: 4px;
+		width: 29vw;
 		height: 57px;
 		margin: 10px 80px 0 0;
 		position: relative;
