coded content provided from Dr. Tavares

--- a/poetry-app/src/Styling/Login.css
+++ b/poetry-app/src/Styling/Login.css
@@ -87,3 +87,10 @@ body, html, #root, .outer {
 .forgot-password a {
   color: #167bff;
 }
+
+.center {
+  width: 75px;
+  height: 75px;
+  margin-top: 0;
+  margin-left: 46%;
+}
