--- a/poetry-app/src/Styling/Login.css
+++ b/poetry-app/src/Styling/Login.css
@@ -15,6 +15,7 @@ body, html, #root, .outer {
   height: 100%;
 }
 
+/*Outer is the purple background seen on all pages*/
 .outer {
   display: flex;
   justify-content: center;
@@ -23,6 +24,7 @@ body, html, #root, .outer {
   background: #8987d1;
 }
 
+/*Inner is the inside white box that holds the login, registration, & home page*/
 @media (max-width: 500px) {
   .inner {
     width: 95vw;
